createPost and createProfile